# ro2_ur5_description

./: CMakeLists.txt  package.xml
cfg/: view_robot.rviz
launch/: view_ur5_ros2.launch.py
urdf/: ur5_robot.urdf  ur5_robot_OK.urdf  ur5_robot_OK1.urdf
